--- a/styles.css
+++ b/styles.css
@@ -71,7 +71,7 @@
     
     padding: 30px;
     margin: 5px;
-    border: 3px solid black;
+    border: 7px solid rgb(241, 49, 145);
 }
 
 .container__seriesfav{
@@ -81,7 +81,7 @@
     
         padding: 50px;
         margin: 5px;
-        border: 3px solid black;
+        border: 7px solid rgb(241, 49, 145);
 
 }
 
@@ -116,8 +116,8 @@
 }
 
 .colorFav {
-    border: solid 10px rgb(252, 169, 186);
-    color: rgb(9, 170, 154);
+    border: solid 10px rgb(241, 49, 145);
+    color: rgb(241, 49, 145);
 
 }
 
