--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@
 }
 .body {
     background-color: white;
+  
 }
 
 
@@ -13,12 +14,13 @@
     color: rgb(241, 49, 145);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
-    margin: 30px 20px;
+    margin: 50px 90px;
+    margin-top: 80px
 }
 
 .form {
-    margin-left: 20px;
-    margin-bottom: 70px;
+    margin-left: 90px;
+    margin-bottom: 80px;
 }
 
 
