--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,14 @@
 }
 
 .form {
+    display: flex;
     margin-left: 90px;
     margin-bottom: 80px;
 }
 
 
 .input__search {
+    flex-grow: 1;
     padding:10px ;
     border-radius: 6px;
     margin-right: 20px;
@@ -32,6 +34,7 @@
     border: 3px solid rgb(241, 49, 145);
     color: rgb(241, 49, 145) ;
     font-size: 20px;
+    margin-bottom: 20px;
 }
 
 .search__button {
@@ -42,7 +45,10 @@
     color: white;
     border: none;
     border-radius: 6px;
-    padding: 14px;
+    height: 50px;
+    width: 80px;
+    margin-left: 100px;
+    margin-right: 150px;
    
 }
 
