--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,7 @@
     display: flex;
     margin-left: 90px;
     margin-bottom: 80px;
+    gap: 10px;
 }
 
 
@@ -37,7 +38,7 @@
     margin-bottom: 20px;
 }
 
-.search__button {
+.button {
     background-color: rgb(241, 49, 145);
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16px;
@@ -47,8 +48,9 @@
     border-radius: 6px;
     height: 50px;
     width: 80px;
-    margin-left: 100px;
-    margin-right: 150px;
+    margin-right: 50px;
+    cursor: pointer;
+   
    
 }
 
